fixed guild list not showing

--- a/src/components/BotHomeContent.module.css
+++ b/src/components/BotHomeContent.module.css
@@ -3,7 +3,7 @@
 
     height: 100%;
     width: 100%;
-    padding: 0.25rem 2rem;
+    padding: 0.25rem 1.5rem;
     box-sizing: border-box;
     white-space: break-spaces;
 }
